begin syllabus revisions

--- a/HB/HB 3116-Ecclesiastes.tex
+++ b/HB/HB 3116-Ecclesiastes.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2019 by Daniel R. Driver.
+% Copyright (c) 2024 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,127 +12,155 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[2.0]{HB 3116(Int)}
+\coursecode[3.0]{HB 3116}
 \coursetitle[Hebrew Bible]{Ecclesiastes}
 
 % Taught as BSTH 4403 at Tyndale in:
 %   - Fall 2015
 % Taught as HB 3116 at AST in:
 %   - Winter 2019
+%   - Summer 2024
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
-\email{ddriver@astheology.ns.ca}
-\officehours{By appointment}
+\email{daniel.driver@astheology.ns.ca}
+\officehours[AST Library]{Mon--Thur, 1:00--2:00 \PM}
 
-\semester{Winter Term 2019}
-\meets{On Fridays}% \meets{on}{at}{in}
-      {From 10:00 \AM\ (Atlantic)}
-      {Online: Brightspace}
-\website{danieldriver.com}
+\semester{Summer Term 2024}
+\meets{Daily in Session 3}% \meets{on}{at}{in}
+      {9:15 \AM--12:15 \PM}
+      {Classroom 3}
+\website[https://danieldriver.com/courses/hb-3116/]{danieldriver.com}
 \cdescription{% copy from the Academic Calendar; add [] for unusual prereqs
-
-In this course Ecclesiastes will be studied in the context of the
-Writings and other wisdom literature, and in connection with the book’s
-reception history. By the end of the course students should be able to:
-understand the basic shape of the Writings and, within that collection,
-books classified as wisdom literature; give examples of extra-biblical
-parallels to wisdom literature; situate Ecclesiastes relative to other
-Solomonic literature; characterize some ancient and modern commentaries
-on Ecclesiastes; articulate a few of the major interpretive options in
-reading Ecclesiastes; defend their own readings of the book in writing,
-with detailed textual support.
-
+Ecclesiastes will be studied in the context of the Writings and other
+wisdom literature, and in connection with the book’s reception history.
+By the end of the course students should be able to: understand the
+basic shape of the Writings; have a critical appreciation of the idea of
+wisdom literature; characterize some ancient and modern commentaries on
+Ecclesiastes; develop their own readings, supporting them with detailed
+exegesis.
 }% end of course description
-\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
-
-In this course Ecclesiastes will be studied in the context of other
-biblical literature, with some reference to extra-biblical sources, and
-in connection with the book's reception history. By the end of the
-course students should be able to:
-	name biblical books classified with the Writings and wisdom literature;
-	understand some different ways this literature has been classified;
-	give examples of extra-biblical parallels to it;
-	locate Ecclesiastes relative to other Solomonic literature;
-	recognize quotes from Ecclesiastes by chapter;
-	name major ancient and modern commentators on Ecclesiastes;
-	report on specific commentators verbally;
-	articulate major interpretive options in reading Ecclesiastes;
-	defend their own preferred readings in writing, with detailed textual support.
-
-}% end of learning objectives
+%\objectives{% recall Bloom's taxonomy: http://www.celt.iastate.edu/teaching/RevisedBlooms1.html
+%
+%In this course Ecclesiastes will be studied in the context of other
+%biblical literature, with some reference to extra-biblical sources, and
+%in connection with the book's reception history. By the end of the
+%course students should be able to:
+%	name biblical books classified with the Writings and wisdom literature;
+%	understand some different ways this literature has been classified;
+%	give examples of extra-biblical parallels to it;
+%	locate Ecclesiastes relative to other Solomonic literature;
+%	recognize quotes from Ecclesiastes by chapter;
+%	name major ancient and modern commentators on Ecclesiastes;
+%	report on specific commentators verbally;
+%	articulate major interpretive options in reading Ecclesiastes;
+%	defend their own preferred readings in writing, with detailed textual support.
+%
+%}% end of learning objectives
 
 \input{\incl/preamble}
 
 \begin{document}
 \input{\incl/title}
 
-  \section{Learning Objectives}
-  \label{objectives}
-
-  \edobject
+%  \section{Learning Objectives}
+%  \label{objectives}
+%
+%  \edobject
 
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following texts are required. Students are strongly encouraged to
-purchase their own copies.
+The following text is required. Students should obtain their own copies.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Christianson}% use the longest item in the bibliography
 
-	\bibitem[Christianson]{Christianson} Eric S. Christianson.
-    \emph{Ecclesiastes Through the Centuries} (paperback).
-    Chichester, West Sussex: Wiley-Blackwell, 2012.
-	ISBN 978-0470674918.
-
-	\bibitem[Fox]{Fox} Michael V. Fox.
-	\emph{Ecclesiastes: The Traditional Hebrew Text with the New JPS Translation}. The JPS Bible Commentary.
-	Philadelphia: Jewish Publication Society, 2004.
-	ISBN 978-0827607422.
+	\bibitem[Qohelet]{Qohelet} Debra Band and Menachem Fisch.
+    \emph{Qohelet: Searching for a Life Worth Living}.
+    Waco, TX: Baylor University Press, 2023.
+	ISBN 978-1481318730.
 
 \end{thebibliography}
 \endgroup
 
 Students may also wish to access a good Study Bible. I recommend either
-the NRSV (ed. Michael Coogan) or the NJPS (ed. Adele Berlin and Marc Zvi
-Brettler), both published by Oxford University Press. Element of both
-versions, and many other useful resources, are available digitally
-through \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://www.oxfordbiblicalstudies.com/}{Oxford Biblical Studies Online}.
+the NRSV (ed. Michael Coogan) or NJPS (ed. Adele Berlin and Marc Zvi
+Brettler) editions published by Oxford University Press.
 
 \section{Supplementary Texts}
 \label{supplementary}
 
-The following reference works are worth owning and consulting.
+Supplementary readings will be recommended throughout the course.
+Excerpts from this literature may be placed on reserve or made available
+electronically. The following titles are especially notable in relation
+to this course. They are not required.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{Christianson}% use the longest item in the bibliography
+
+	\bibitem[BHQ]{BHQ} \emph{Megilloth}. Vol. 18 of \emph{Biblia Hebraica Quinta}.
+	Edited by Adrian Schenker et al.
+	Stuttgart: Deutsche Bibelgesellschaft, 2004.
+
+	\bibitem[Barbour]{Barbour} Barbour [Grillo], Jennie.
+	\emph{The Story of Israel in the Book of Qohelet: Ecclesiastes as Cultural Memory}.
+	Oxford: Oxford University Press, 2012.
+%	See also Grillo, Jennifer.
+%	ISBN 978-0199657827.
+
+	\bibitem[Bolin]{Bolin} Bolin, Thomas M.
+	\emph{Ecclesiastes and the Riddle of Authorship}.
+	London: Routledge, 2017.
+
+	\bibitem[Christianson]{Christianson} Christianson, Eric S.
+    \emph{Ecclesiastes Through the Centuries}.
+    Chichester, West Sussex: Wiley-Blackwell, 2012.
+%	ISBN 978-0470674918.
+
+	\bibitem[Dell 2013]{Dell} Dell, Katharine J.
+	\emph{Interpreting Ecclesiastes: Readers Old and New}.
+	Winona Lake, IN: Eisenbrauns, 2013.
+%	ISBN 978-1575062815.
+
+	\bibitem[Dell 2023]{Dell} Dell, Katharine J.
+	\emph{The Lord by Wisdom Founded the Earth: Creation and Covenant in Old Testament Theology}.
+	Waco, TX: Baylor University Press, 2023.
+%	ISBN 978-1481317047.
+
+	\bibitem[Fox]{Fox} Fox, Michael V.
+	\emph{Ecclesiastes: The Traditional Hebrew Text with the New JPS Translation}. The JPS Bible Commentary.
+	Philadelphia: Jewish Publication Society, 2004.
+%	ISBN 978-0827607422.
+
+	\bibitem[Krüger]{Krüger} Krüger, Thomas.
+	\emph{Qoheleth: A Commentary}. Translated by O. C. Dean Jr. Hermeneia: A Critical and Historical Commentary on the Bible.
+	Minneapolis: Fortress, 2004.
+
+\end{thebibliography}
+\endgroup
+
+Also, the following basic works are also worth consulting and even owning.
 \cite{rlgs} in particular contains sound advice on core skills like
 reading religious texts, writing essays and reviews, revising essays,
 making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Making Sense}% use the longest item in the bibliography
+\begin{thebibliography}{RLGS}% use the longest item in the bibliography
 
-	\bibitem[Barbour]{Barbour} Jennie Barbour.
-	\emph{The Story of Israel in the Book of Qohelet: Ecclesiastes as Cultural Memory}. Oxford Theological Monographs.
-	Oxford: Oxford University Press, 2012.
-	ISBN 978-0199657827.
-
-	\bibitem[Dell]{Dell} Katharine Dell.
-	\emph{Interpreting Ecclesiastes: Readers Old and New}.
-	Winona Lake, Indiana: Eisenbrauns, 2013.
-	ISBN 978-1575062815.
-
-	\bibitem[Making Sense]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\bibitem[RLGS]{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
 	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
-	3rd ed. Toronto: Oxford University Press, 2019. ISBN 978-0199026838.
+	3rd ed. Toronto: Oxford University Press, 2019. AST Library: Reference BL 41 N67 2019.
 
 	\bibitem[SBL2]{sbl2} Collins, Billie Jean, et al.
 	\emph{The SBL Handbook of Style}.
-	2nd ed. Atlanta: SBL Press, 2014. ISBN 978-1589839649.
-	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{Chicago Style}}
+	2nd ed. Atlanta: SBL Press, 2014.
+	Designed to augment \href{https://proxy.openathens.net/login?qurl=https%3A%2F%2Fwww.chicagomanualofstyle.org%2Fbook%2Fed17%2Ffrontmatter%2Ftoc.html}{\emph{Chicago Style}}
 	(the standard at AST), there is also a free
-	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}.
+	\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for SBL2}. AST Library: Reference PN 147 S26 2014.
 
 \end{thebibliography}
 \endgroup
@@ -149,21 +177,19 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary Text}&\textbf{Secondary Reading}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary Text}&\textbf{Questions}&\textbf{Date}\\
 	\midrule
-	& Ecclesiastes \thesession & Christianson 87--155; Fox Intro, 3--11   & 11 Jan. \\
-	& Ecclesiastes \thesession & Christianson Intro, 156--163; Fox 11--19 & 18 Jan. \\
-	& Ecclesiastes \thesession & Christianson 164--179; Fox 19--26        & 25 Jan. \\
-	& Ecclesiastes \thesession & Christianson 180--183; Fox 27--32        &  1 Feb. \\
-	& Ecclesiastes \thesession & Christianson 183--185; Fox 33--38        &  8 Feb. \\
-	& Ecclesiastes \thesession & Christianson 184--187; Fox 38--42        & 15 Feb. \\
-	\noclass{Midterm Break}                                               & 22 Feb. \\
-	& Ecclesiastes \thesession & Christianson 188--201; Fox 43--53        &  1 Mar. \\
-	& Ecclesiastes \thesession & Christianson 201--205; Fox 53--61        &  8 Mar. \\
-	& Ecclesiastes \thesession & Christianson 206--215; Fox 61--67        & 15 Mar. \\
-	& Ecclesiastes \thesession & Christianson 216--224; Fox 67--72        & 22 Mar. \\
-	& Ecclesiastes \thesession & Christianson 225--246; Fox 72--76        & 29 Mar. \\
-	& Ecclesiastes \thesession & Christianson 247--263; Fox 77--85        &  5 Apr. \\
+	& Ecclesiastes 1     & What is \emph{hevel}?   & 15 July \\
+	& Ecclesiastes 1--12 & Five questions from you               & 16 July \\
+	& Ecclesiastes 2     & Who is King Qohelet?               & 17 July \\
+	& Ecclesiastes 3--4  & What time do you call this?        & 18 July \\
+	& Ecclesiastes 5--6  & Christianson 183--185; Fox 33--38        & 19 July \\
+	\noclass{Midterm Break}                                         & 20--21 July \\
+	& Ecclesiastes 7--8  & Christianson 188--201; Fox 43--53        & 22 July \\
+	& Ecclesiastes 9--10 & Christianson 201--205; Fox 53--61        & 23 July \\
+	& Ecclesiastes 11    & Christianson 206--215; Fox 61--67        & 24 July \\
+	& Ecclesiastes 12    & Christianson 216--224; Fox 67--72        & 25 July \\
+	& Ecclesiastes 1--12 & Christianson 225--246; Fox 72--76        & 26 July \\
 	\reminder{End of Term: Final marks are due for all courses}{10 Apr.}            \\
 	\bottomrule
   \end{tabular}
