update some links

--- a/HB/HB 3116-Ecclesiastes.tex
+++ b/HB/HB 3116-Ecclesiastes.tex
@@ -120,12 +120,12 @@ to this course. They are not required.
     Chichester, West Sussex: Wiley-Blackwell, 2012.
 %	ISBN 978-0470674918.
 
-	\bibitem[Dell 2013]{Dell} Dell, Katharine J.
+	\bibitem[Dell 2013]{Dell13} Dell, Katharine J.
 	\emph{Interpreting Ecclesiastes: Readers Old and New}.
 	Winona Lake, IN: Eisenbrauns, 2013.
 %	ISBN 978-1575062815.
 
-	\bibitem[Dell 2023]{Dell} Dell, Katharine J.
+	\bibitem[Dell 2023]{Dell23} Dell, Katharine J.
 	\emph{The Lord by Wisdom Founded the Earth: Creation and Covenant in Old Testament Theology}.
 	Waco, TX: Baylor University Press, 2023.
 %	ISBN 978-1481317047.
@@ -177,12 +177,12 @@ the needs of the class.
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}% make sure the column config agrees with \setcolumncount
 	\toprule
-	\sessionskip{\textbf{\S}.}&\textbf{Primary Text}&\textbf{Questions}&\textbf{Date}\\
+	\sessionskip{\textbf{\S}.}&\textbf{Primary Text}&\textbf{Questions \emph{\&} Themes}&\textbf{Date}\\
 	\midrule
-	& Ecclesiastes 1     & What is \emph{hevel}?   & 15 July \\
-	& Ecclesiastes 1--12 & Five questions from you               & 16 July \\
+	& Ecclesiastes 1     & What is \emph{hevel}?              & 15 July \\
+	& Ecclesiastes 1--12 & Five questions from you            & 16 July \\
 	& Ecclesiastes 2     & Who is King Qohelet?               & 17 July \\
-	& Ecclesiastes 3--4  & What time do you call this?        & 18 July \\
+	& Ecclesiastes 3--4  & What is time?                      & 18 July \\
 	& Ecclesiastes 5--6  & Christianson 183--185; Fox 33--38        & 19 July \\
 	\noclass{Midterm Break}                                         & 20--21 July \\
 	& Ecclesiastes 7--8  & Christianson 188--201; Fox 43--53        & 22 July \\
@@ -190,7 +190,7 @@ the needs of the class.
 	& Ecclesiastes 11    & Christianson 206--215; Fox 61--67        & 24 July \\
 	& Ecclesiastes 12    & Christianson 216--224; Fox 67--72        & 25 July \\
 	& Ecclesiastes 1--12 & Christianson 225--246; Fox 72--76        & 26 July \\
-	\reminder{End of Term: Final marks are due for all courses}{10 Apr.}            \\
+	\reminder{End of Term: Summer Administration hours begin}{29 July} \\
 	\bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
@@ -279,17 +279,15 @@ semester progresses. Students are encouraged to pursue secondary
 literature on their own as well, with an awareness that a good, focussed
 bibliography is an essential component of the exegetical paper. For a
 place to start your research, refer to the detailed bibliographies in
-the back of \cite{Christianson} and \cite{Dell}. You might also see what
-you can find through the following databases:
+the back of \cite{Christianson} and \cite{Dell13}, among others. See
+what you can find through the following databases, too:
 
 \begin{itemize}
-\item \href{http://ezproxy.astheology.ns.ca:2048/login?url=http://www.oxfordbibliographies.com/browse?module_0=obo-9780195393361}{Oxford Bibliographies Online: Biblical Studies}
+\item \href{https://www.oxfordbibliographies.com/display/document/obo-9780195393361/obo-9780195393361-0015.xml#obo-9780195393361-0015-div1-0005}{Oxford Bibliographies Online: Biblical Studies} -- s.v. “Ecclesiastes/Qohelet,” by Timothy J. Sandoval and Marcus Hayes
 \item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=ota}{Old Testament Abstracts}
 \item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=rfh}{ATLA Religion Database (Full Text)}
-\item \href{https://login.proxy1.athensams.net/login?qurl=https%3A%2F%2Fwww.degruyter.com%2F}{EBR: Encyclopedia of the Bible and Its Reception Online} --
-Note: after logging in through OpenAthens, search  "Encyclopedia of the
-Bible and Its Reception Online" in the top right-hand corner search bar
-for access to the database.
+\item \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.degruyter.com/document/doi/10.1515/ebr/html}{EBR: Encyclopedia of the Bible and Its Reception Online} --
+s.v. “Ecclesiastes, Book of,” by various authors (and try other lemmas)
 \end{itemize}
 
 \end{document}
