Eccl/Qoh syllabus for S24

--- a/HB/HB 3116-Ecclesiastes.tex
+++ b/HB/HB 3116-Ecclesiastes.tex
@@ -24,7 +24,7 @@
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{daniel.driver@astheology.ns.ca}
-\officehours[AST Library]{Mon--Thur, 1:00--2:00 \PM}
+\officehours[AST Library, Main Floor]{Mon--Thur, 2:00--3:00 \PM}
 
 \semester{Summer Term 2024}
 \meets{Daily in Session 3}% \meets{on}{at}{in}
@@ -71,81 +71,101 @@ exegesis.
 \section{Required Texts \& Materials}
 \label{texts}
 
-The following text is required. Students should obtain their own copies.
+The following texts are required. Students are encouraged to obtain their own hard copies.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
-\begin{thebibliography}{Christianson}% use the longest item in the bibliography
+\begin{thebibliography}{BS 1747–75}% use the longest item in the bibliography
 
 	\bibitem[Qohelet]{Qohelet} Debra Band and Menachem Fisch.
     \emph{Qohelet: Searching for a Life Worth Living}.
-    Waco, TX: Baylor University Press, 2023.
-	ISBN 978-1481318730.
+    Waco, TX: Baylor University Press, 2023. AST Library copy on reserve.
+%	ISBN 978-1481318730.
+
+	\bibitem[TBD]{TBD} Select an additional commentary on Ecclesiates.
+	You may find one upstairs in the library stacks (try BS 1747–1475),
+	in a commentary kept in the reference section, or indeed somewhere
+	else. Nominate your selection at the start of the second class. Be
+	prepared to change commentaries if necessary.
 
 \end{thebibliography}
 \endgroup
 
-Students may also wish to access a good Study Bible. I recommend either
-the NRSV (ed. Michael Coogan) or NJPS (ed. Adele Berlin and Marc Zvi
-Brettler) editions published by Oxford University Press.
+Students may also want access to a good Study Bible. I recommend the OUP
+editions of either the NRSV (ed. Michael Coogan) or NJPS (ed. Adele
+Berlin and Marc Zvi Brettler).
 
 \section{Supplementary Texts}
 \label{supplementary}
 
 Supplementary readings will be recommended throughout the course.
 Excerpts from this literature may be placed on reserve or made available
-electronically. The following titles are especially notable in relation
-to this course. They are not required.
+electronically. The titles below, selected from AST’s library holdings,
+are notable in relation to the aims of this course.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Christianson}% use the longest item in the bibliography
 
-	\bibitem[BHQ]{BHQ} \emph{Megilloth}. Vol. 18 of \emph{Biblia Hebraica Quinta}.
-	Edited by Adrian Schenker et al.
-	Stuttgart: Deutsche Bibelgesellschaft, 2004.
+%	\bibitem[BHQ]{BHQ} \emph{Megilloth}. Vol. 18 of \emph{Biblia Hebraica Quinta}.
+%	Edited by Adrian Schenker et al.
+%	Stuttgart: Deutsche Bibelgesellschaft, 2004.
 
 	\bibitem[Barbour]{Barbour} Barbour [Grillo], Jennie.
 	\emph{The Story of Israel in the Book of Qohelet: Ecclesiastes as Cultural Memory}.
-	Oxford: Oxford University Press, 2012.
+	Oxford: Oxford University Press, 2012. AST Library reserve: BS 1475.52 B37 2012.
 %	See also Grillo, Jennifer.
 %	ISBN 978-0199657827.
 
-	\bibitem[Bolin]{Bolin} Bolin, Thomas M.
-	\emph{Ecclesiastes and the Riddle of Authorship}.
-	London: Routledge, 2017.
+%	\bibitem[Bolin]{Bolin} Bolin, Thomas M.
+%	\emph{Ecclesiastes and the Riddle of Authorship}.
+%	London: Routledge, 2017.
 
 	\bibitem[Christianson]{Christianson} Christianson, Eric S.
     \emph{Ecclesiastes Through the Centuries}.
-    Chichester, West Sussex: Wiley-Blackwell, 2012.
+    Malden, MA: Blackwell, 2012. \href{https://ast.primo.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=930405710007188&institutionId=7188&customerId=7185&VE=true}{AST eBook online}.
 %	ISBN 978-0470674918.
 
-	\bibitem[Dell 2013]{Dell13} Dell, Katharine J.
-	\emph{Interpreting Ecclesiastes: Readers Old and New}.
-	Winona Lake, IN: Eisenbrauns, 2013.
+%	\bibitem[Dell 2013]{Dell13} Dell, Katharine J.
+%	\emph{Interpreting Ecclesiastes: Readers Old and New}.
+%	Winona Lake, IN: Eisenbrauns, 2013.
 %	ISBN 978-1575062815.
+
+	\bibitem[Dell 2020]{Dell20} Dell, Katharine J.
+	\emph{The Solomonic Corpus of “Wisdom” and Its Influence}.
+	Oxford: Oxford University Press, 2020. \href{https://ast.primo.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=930405680007188&institutionId=7188&customerId=7185&VE=true}{AST eBook online}.
+%	ISBN: 978-0198861560.
 
 	\bibitem[Dell 2023]{Dell23} Dell, Katharine J.
 	\emph{The Lord by Wisdom Founded the Earth: Creation and Covenant in Old Testament Theology}.
-	Waco, TX: Baylor University Press, 2023.
+	Waco, TX: Baylor University Press, 2023. \href{https://ast.primo.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=930405660007188&institutionId=7188&customerId=7185&VE=true}{AST eBook online}.
 %	ISBN 978-1481317047.
 
 	\bibitem[Fox]{Fox} Fox, Michael V.
 	\emph{Ecclesiastes: The Traditional Hebrew Text with the New JPS Translation}. The JPS Bible Commentary.
-	Philadelphia: Jewish Publication Society, 2004.
+	Philadelphia: Jewish Publication Society, 2004. AST Library reserve: BS 1473 F69 2004.
 %	ISBN 978-0827607422.
 
 	\bibitem[Krüger]{Krüger} Krüger, Thomas.
 	\emph{Qoheleth: A Commentary}. Translated by O. C. Dean Jr. Hermeneia: A Critical and Historical Commentary on the Bible.
-	Minneapolis: Fortress, 2004.
+	Minneapolis: Fortress, 2004. AST Library reserve: BS 1475.53 K78 2004.
+
+	\bibitem[Short]{Short} Short, Robert L.
+	\emph{A Time to Be Born -- A Time to Die}.
+	New York: Harper \& Row, 1973. AST Library reserve: BS 1475.2 S56 1973; \href{https://archive.org/embed/timetobebornatim0000shor}{Internet Archive}.
+
+	\bibitem[Stone]{Stone} Stone, Timothy J.
+	\emph{The Compilational History of the Megilloth: Canon, Contoured Intertextuality and Meaning in the Writings}. FAT 2.59.
+	Tübingen: Mohr Siebeck, 2013. \href{https://ast.primo.exlibrisgroup.com/view/action/uresolver.do?operation=resolveService&package_service_id=930405630007188&institutionId=7188&customerId=7185&VE=true}{AST eBook online}.
+%	ISBN: 978-3161523755.
 
 \end{thebibliography}
 \endgroup
 
-Also, the following basic works are also worth consulting and even owning.
-\cite{rlgs} in particular contains sound advice on core skills like
-reading religious texts, writing essays and reviews, revising essays,
-making oral presentations, and learning languages.
+Also, these two general works are worth consulting and even owning.
+%\cite{rlgs} in particular contains sound advice on core skills like
+%reading religious texts, writing essays and reviews, revising essays,
+%making oral presentations, and learning languages.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
@@ -180,16 +200,16 @@ the needs of the class.
 	\sessionskip{\textbf{\S}.}&\textbf{Primary Text}&\textbf{Questions \emph{\&} Themes}&\textbf{Date}\\
 	\midrule
 	& Ecclesiastes 1     & What is \emph{hevel}?              & 15 July \\
-	& Ecclesiastes 1--12 & Five questions from you            & 16 July \\
+	& Ecclesiastes 1--12 & Five questions of your own         & 16 July \\
 	& Ecclesiastes 2     & Who is King Qohelet?               & 17 July \\
-	& Ecclesiastes 3--4  & What is time?                      & 18 July \\
-	& Ecclesiastes 5--6  & Christianson 183--185; Fox 33--38        & 19 July \\
-	\noclass{Midterm Break}                                         & 20--21 July \\
-	& Ecclesiastes 7--8  & Christianson 188--201; Fox 43--53        & 22 July \\
-	& Ecclesiastes 9--10 & Christianson 201--205; Fox 53--61        & 23 July \\
-	& Ecclesiastes 11    & Christianson 206--215; Fox 61--67        & 24 July \\
-	& Ecclesiastes 12    & Christianson 216--224; Fox 67--72        & 25 July \\
-	& Ecclesiastes 1--12 & Christianson 225--246; Fox 72--76        & 26 July \\
+	& Ecclesiastes 3--4  & What time do you call this?        & 18 July \\
+	& Ecclesiastes 5--6  & Can one find a perfect good?       & 19 July \\
+	\noclass{Midterm Break}                                   & 20--21 July \\
+	& Ecclesiastes 7--8  & Is that what they say?             & 22 July \\
+	& Ecclesiastes 9--10 & What are the limits of knowledge?  & 23 July \\
+	& Ecclesiastes 11    & How sweet is the light!            & 24 July \\
+	& Ecclesiastes 12    & How does wisdom shape the book?    & 25 July \\
+	& Ecclesiastes 1--12 & The sum of the matter              & 26 July \\
 	\reminder{End of Term: Summer Administration hours begin}{29 July} \\
 	\bottomrule
   \end{tabular}
@@ -206,63 +226,67 @@ The grade structure for \ccode has the following elements.
 
 \begin{enumerate}
 
-	\item I will set \textbf{discussion prompts} each week. They are
-	intended to help you engage with the assigned reading material, the
-	lectures, and your classmates. Prompt responses may vary in length.
-	In fact there is no required word count, thought if it helps you may
-	think of about 300 words as a rule of thumb. Questions will go up by
-	the start of each class day (Fridays, 10 \AM\ Atlantic Time). Answer
-	the week's question before the following Wednesday. Then, before the
-	next class, take some time to read the responses of your classmates.
-	You are invited to post another 50 words or so as you interact with
-	them. No post is required in the week of your creative presentation.
+	\item \textbf{Notes and quotes} will be solicited from students
+	early in each class. These are to be drawn from the primary reading
+	in \cite{Qohelet} and another commentary of your choice
+	(\cite{TBD}). What do you note about the assigned material? What
+	images, words, phrases, verses, or motifs stand out to you from text
+	and translation, and from the visual and verbal commentary of Band
+	and Fisch? What does your chosen commentator add? Make notes as you
+	read. Be prepared to share some highlights with the class. Finally,
+	be sure to address any particular prompts that the professor may set
+	as homework for the day. Regular participation is expected and
+	required.
 
-	\item Students are to make a \textbf{creative presentation} related
-	to one chapter of Ecclesiastes, due the week after the chapter is
-	assigned. (A presentation on Ecclesiastes 1, for example, would be
-	due at the start of Week 2.) Presentations may be audio or video,
-	and they may take virtually any form you wish -- a podcast, a
-	homily, an interview, a dramatic piece, an explication of fine art
-	(cf. \cite{Christianson}), a show of original artwork, or some other
-	creative thing you envision. It should last 15 to 20 minutes, and
-	should feel like it deserves 20\% of the final grade. The only
-	strict requirement is that the work be sharable by URL. (Try
-	SoundCloud or YouTube.) Sign up for a week early on and, when the
-	time comes, post your title and link to the presentation forum.
+	\item A \textbf{short paper} will give students an opportunity to
+	work out an answer to a key question related to the interpretation
+	of Ecclesiastes. The paper should be 1,500 words long, plus or minus
+	10\%. Students may select from one of the following questions:
 
-	\item A major \textbf{exegetical paper} will give students an
-	opportunity to work directly and closely with the biblical text. The
-	first task is to identify an appropriate text.  Select a suitably
-	short passage from Ecclesiastes. Focus on just a few verses that
-	interest you: a full chapter is almost certainly too much material
-	to handle well in a paper of this length. Then, conduct an analysis
-	and explication of your passage. Advance a thesis that relates to
-	the text itself, and your explication of it. If you are unsure how
-	to craft a thesis, see me and \cite[Chs 3, 5, 8, 11]{rlgs} for
-	further guidance. Feel free to build on an idea first explored in
-	one of your discussion prompts. The paper is due one week before the
-	last class (on 29 March 2019). It should be 4,000 words long, plus
-	or minus 10\%. The total count includes footnotes but not the final
-	bibliography, which should contain at least a dozen scholarly
-	sources.
+\begin{enumerate}
+	\item How does the persona of King Qohelet emerge in Eccl 1–3?
+	\item How should the term \emph{hevel} be translated in the book of Ecclesiastes?
+	\item In what sense is Ecclesiastes a book of wisdom within the HB/OT?
+	\item In what sense is Ecclesiastes rightly understood as a book of joy?
+\end{enumerate}
+
+	Alternatively, students may propose a different question, subject to
+	approval by the professor. Final drafts of these papers are due at
+	the start of class on Friday, 19 July, where they will be read aloud
+	to a small group of peers. Students \emph{must} bring complete
+	drafts with them to this workshop. Failure to do so will result in a
+	loss of 50\% on the assignment grade. Revised final submissions are
+	to be handed to the professor in hard copy, stapled on top of the
+	workshop draft, at the start of class on Monday, 22 July.
+
+	\item Students are to produce some form of \textbf{visual exegesis}
+	related to a verse, short passage, or (at most) one chapter of
+	Ecclesiastes. Band provides a superb example; others may be seen in
+	\cite{Christianson} and \cite{Short}. These creative responses to
+	the text will be presented to the class on the last two days of the
+	courses (25–26 July). Students will retain possession of their own
+	artwork. For evaluation, they will submit a 1,000 word essay
+	explaining their art’s relation to the text of Ecclesiastes. For a
+	model, look again to Band. The explanatory essays are due at the
+	start of class on Friday, 26 July.
 
 \end{enumerate}
 
 The breakdown for the semester's total work is shown in
-\autoref{distribution}.
+\autoref{grade-dist}.
 
 \begin{table}[htbp]
   \centering
   {\lining
   \begin{tabular}{lr}
     \toprule
-    Discussion Prompts    & 40\% \\
-    Creative Presentation & 20\% \\
-    Exegetical Paper      & 40\% \\
+    Notes \& Quotes     & 30\% \\
+    Short Essay         & 30\% \\
+    Visual Exegesis     & 40\% \\
     \bottomrule
   \end{tabular}}
   \caption{Distribution of Grades}
-  \label{distribution}
+  \label{grade-dist}
 \end{table}
 
 \input{\policy/grades}
@@ -274,20 +298,18 @@ The breakdown for the semester's total work is shown in
 
 Articles and book chapters from the vast literature on Ecclesiastes in
 reception, and in the context of the Writings and wisdom literature
-(so-called), may be recommended and placed on the course website as the
-semester progresses. Students are encouraged to pursue secondary
-literature on their own as well, with an awareness that a good, focussed
-bibliography is an essential component of the exegetical paper. For a
-place to start your research, refer to the detailed bibliographies in
-the back of \cite{Christianson} and \cite{Dell13}, among others. See
-what you can find through the following databases, too:
+(so-called), may be recommended as the semester progresses. Students are
+encouraged to pursue secondary literature on their own as well. To start
+your research, refer to the bibliographies in the books listed in
+\autoref{supplementary}, above, search the library catalogue, and
+consult relevant databases including:
 
 \begin{itemize}
-\item \href{https://www.oxfordbibliographies.com/display/document/obo-9780195393361/obo-9780195393361-0015.xml#obo-9780195393361-0015-div1-0005}{Oxford Bibliographies Online: Biblical Studies} -- s.v. “Ecclesiastes/Qohelet,” by Timothy J. Sandoval and Marcus Hayes
-\item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=ota}{Old Testament Abstracts}
-\item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=rfh}{ATLA Religion Database (Full Text)}
+\item \href{https://www.oxfordbibliographies.com/display/document/obo-9780195393361/obo-9780195393361-0015.xml#obo-9780195393361-0015-div1-0005}{Oxford Bibliographies Online: Biblical Studies} -- s.v. “Ecclesiastes/Qohelet,” by Timothy J. Sandoval and Marcus Hayes;
+\item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=ota}{Old Testament Abstracts};
+\item \href{https://search.ebscohost.com/login.aspx?authtype=ip,shib&custid=s5315951&groupid=main&profile=ehost&defaultdb=rfh}{ATLA Religion Database (Full Text)};
 \item \href{https://go.openathens.net/redirector/astheology.ns.ca?url=https://www.degruyter.com/document/doi/10.1515/ebr/html}{EBR: Encyclopedia of the Bible and Its Reception Online} --
-s.v. “Ecclesiastes, Book of,” by various authors (and try other lemmas)
+s.v. “Ecclesiastes, Book of,” by various authors (and try other lemmas).
 \end{itemize}
 
 \end{document}
