--- a/policy/grades.tex
+++ b/policy/grades.tex
@@ -1,30 +1,36 @@
-\ProvidesFile{grades.tex}[2023/09/06 v2.5 -- Course policy]
+\ProvidesFile{grades.tex}[2024/07/12 v3.0 -- Course policy]
 
 AST's \href{https://www.astheology.ns.ca/students/resources.html}{Academic
-Calendar} provides guidelines and criteria for academic assessment. Marks are
-assigned by letter grade using these benchmarks. Note that graduate and
-undergraduate programs are currently assessed on a different scales at AST (see
-\autoref{grade-syst}). For graduate students, a grade of C is deemed
-``Unsatisfactory,'' whereas for undergraduate (BTh) students, a C is
-``Satisfactory'' and the grade of D is possible for ``Marginal'' performance.
+Calendar} provides guidelines and criteria for academic assessment.
+Marks are assigned by letter grade using these benchmarks. Note that
+graduate and undergraduate programs are assessed on a different scales
+at AST (see \autoref{grade-syst}). For graduate students a C grade is
+deemed ``Unsatisfactory,'' whereas for undergraduates a C can be
+satisfactory in different degrees and a D is assigned for
+``Unsatisfactory'' performance.
 
 \begin{table}[htbp]
  \centering
  {\lining\footnotesize
- \begin{tabular}{l|ll|ll}
+ \begin{tabular}{l llr llr}
    \toprule
-   \multicolumn{1}{l}{} & \multicolumn{2}{c}{Graduate Courses}   & \multicolumn{2}{c}{Undergraduate Courses} \\
-   \midrule %\cline{2-5}
-   A+          & 94--100    & Exceptional               & 90--100    & Excellent                 \\
-   A           & 87--93     & Outstanding               & 85--89     & Excellent                 \\
-   A\char"2212 & 80--86     & Excellent                 & 80--84     & Excellent                 \\ [1ex]
-   B+          & 77--79     & Good                      & 75--79     & Good                      \\
-   B           & 73--76     & Acceptable                & 70--74     & Good                      \\
-   B\char"2212 & 70--72     & Marginally Acceptable     &            &                           \\ [1ex]
-   C           & 60--69     & Unsatisfactory            & 60--69     & Satisfactory              \\
-   D           &            &                           & 50--59     & Marginal                  \\
-   F           & 0--59      & Failure                   & 0--49      & Failure                   \\
-   FP          & 0          & Failure due to Plagiarism & 0          & Failure due to Plagiarism \\
+               & \multicolumn{3}{c}{\textsc{Graduate Courses}} & \multicolumn{3}{c}{\textsc{Undergraduate Courses}} \\
+               & Percent & Descriptor  & Points         & Percent & Descriptor  & Points \\
+               \cmidrule(lr){2-4}                       \cmidrule(lr){5-7}
+   A+          & 90--100 & Exceptional           & 4.30 & 90--100 & Exceptional             & 4.30 \\
+   A           & 85--89  & Outstanding           & 4.00 & 85--89  & Outstanding             & 4.00 \\
+   A\char"2212 & 80--84  & Excellent             & 3.70 & 80--84  & Excellent               & 3.70 \\ [1ex]
+
+   B+          & 77--79  & Very Good             & 3.30 & 77--79  & Very Good               & 3.30 \\
+   B           & 73--76  & Good                  & 3.00 & 73--76  & Good                    & 3.00 \\
+   B\char"2212 & 70--72  & Marginal              & 2.70 & 70--72  & Fair                    & 2.70 \\ [1ex]
+
+   C+          &         &                       &      & 67--69  & Satisfactory            & 2.30 \\
+   C           & 60--69  & Unsatisfactory        & 2.00 & 63--66  & Less Satisfactory       & 2.00 \\
+   C\char"2212 &         &                       &      & 60--62  & Marginal                & 1.70 \\ [1ex]
+
+   D           &         &                       &      & 50--59  & Unsatisfactory          & 1.00 \\
+   F           & 0--59   & Failure               & 0.00 & 0--49   & Failure                 & 0.00 \\
    \bottomrule
  \end{tabular}}
  \caption{Summary Definitions of Grades at AST}
